copy changes blogs section

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                         <h6 class="category">Tech</h6>
                                     </div>
                                 </div>
-                                <h3 class="card-title"><a href="https://dev.to/jasmin" target="_blank">See Articles on
+                                <h3 class="card-title"><a href="https://dev.to/jasmin" target="_blank">Posts on
                                         Dev.to</a>
                                 </h3>
                                 <p class="card-description">
@@ -375,8 +375,8 @@
                                         <h6 class="category">Tech</h6>
                                     </div>
                                 </div>
-                                <h3 class="card-title"><a href="https://medium.com/@jasmin.virdi" target="_blank">See
-                                        Articles on
+                                <h3 class="card-title"><a href="https://medium.com/@jasmin.virdi" target="_blank">
+                                        Posts on
                                         Medium</a>
                                 </h3>
                                 <p class="card-description">
@@ -397,8 +397,8 @@
                                         <h6 class="category">Tech</h6>
                                     </div>
                                 </div>
-                                <h3 class="card-title"><a href="https://medium.com/@jasmin.virdi" target="_blank">See
-                                        Articles on
+                                <h3 class="card-title"><a href="https://medium.com/@jasmin.virdi" target="_blank">
+                                        Posts on
                                         Hashnode</a>
                                 </h3>
                                 <p class="card-description">
